# CloudRedirect

./: .gitignore  CMakeLists.txt  README.md  Version.props
.github/workflows/: sync-and-release.yml
cli-dotnet/: Program.cs
cli-rust/: Cargo.toml
flatpak/: org.cloudredirect.CloudRedirect.metainfo.xml  org.cloudredirect.CloudRedirect.yml
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/summaries/: 1614df5a9c8f79b300d54a1cf72bf96e3dc543af699b427b7ff84727d56e822e-763703720700face2b8b7b38d167944c0f33b39f5b958d942da5c07a3e605cb6.delta  19931dfc35dfd54693791b0eca3b4e97ffbad9b78bdf3d304a36ea42126b32fe-62dba259e4b2bbbb40899b5694c8f6c491d76adfadd79b9c43a071bda6bedcc3.delta  1b00e7e384cdef340f179e06ceb440c8eed8e31a47f1454901826ea2a4063cf6-8f601a5aace7907122cb7e6011f15707ae28dfd6fe4fa5196260c50013a6a9ad.delta  1cc9becd8f0a3a5ec42cd971c5b2a4a9bf5a084dfc3bb90108135e6410763671-763703720700face2b8b7b38d167944c0f33b39f5b958d942da5c07a3e605cb6.delta  2402d7d2935ae40b0134b58f1c8a3e0577b9c13c0ba5a235517172574670025d-292f838f95fdeaf1c144104be2591692136d7659f93181ebd8993ffeac5951b3.delta  (+20 more)
src/: cloud_intercept.cpp  cloud_intercept.h  cloud_provider_base.cpp  cloud_provider_base.h  cloud_storage.cpp  cloud_storage.h  file_util.h  google_drive.cpp  http_server.cpp  local_storage.cpp  local_storage.h  onedrive.cpp  onedrive_provider.h  rpc_handlers.cpp  rpc_handlers.h  vdf.cpp  vdf.h  webdav_provider.cpp  webdav_provider.h
src/common/: app_state.cpp  (+34 more)
tests/: resolver_test.cpp
ui/: CloudRedirect.csproj  MainWindow.xaml  MainWindow.xaml.cs
ui-linux/: CMakeLists.txt
(+109 files in other folders)
